Fixed some layout issues

--- a/landing-page.css
+++ b/landing-page.css
@@ -1,9 +1,3 @@
-/*!
- * Start Bootstrap - Landing Page Bootstrap Theme (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-
 body,
 html {
     width: 100%;
@@ -39,15 +33,6 @@ h6 {
     background-size: cover;
 }
 
-.top-page{
-	padding-top: 50px;
-	}
-	
-.contact-page{
-	padding-top: 50px;
-	position: relative;
-    }
-	
 
 .intro-message {
     position: relative;
@@ -173,6 +158,7 @@ h6 {
 .footer,.push {
 	height:75px;
   	background-color: #f8f8f8;
+  	padding-top: 10px;
 }
 
 .wrapper {
