--- a/style.css
+++ b/style.css
@@ -1,48 +1,40 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 06-May-2015, 18:39:39
-    Author     : Bart
-*/
-
-body {
-    margin: 0;
-    padding: 0;
-    background: activeborder;
+body,
+html {
+    width: 100%;
+    height: 100%;
 }
 
-ul {
-    list-style: none;
-    margin: auto;
-    padding: 0;
-   
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
 }
 
-li {
-    /*float:left;*/
-    
+.intro-header {
+    padding-top: 50px; /* On other pages make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
+    padding-bottom: 50px;
+    text-align: center;
+    color: #f8f8f8;
+    background-color: #000000;
+    background-size: cover;
 }
 
-a {
-        font-family: Arial, Helvetica, sans-serif;
-        display: list-item;
-        text-align: center;
-        width: 150px;
-        padding: 0px;
-        text-decoration: none;
-        color: black;
-        background-color: #9791FF;
-        border: 1px solid black;
-}
+.top-page{
+	padding-top: 50px;
+	}
+	
+.contact-page{
+	padding-top: 50px;
+	position: relative;
+	padding-bottom:115px;
+    }
 
-a:hover {
-    text-decoration: none;
-    color: #fff;
-  
-}
+
 
 
 
